Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Data Lakes vs. Data Warehouses</title>
+  <title>Insights and Strategies on VMware: Navigating
+    the Evolving Hypervisor Market</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -37,7 +38,8 @@
 
     <!-- ✅ MOBILE HEADING (TOP ONLY ON MOBILE) -->
     <h1 class="mobile-heading text-3xl font-semibold leading-snug">
-      Data Lakes vs. Data Warehouses: A Cost and Performance Benchmark
+      Insights and Strategies on VMware: Navigating
+      the Evolving Hypervisor Market
     </h1>
 
     <!-- TOP ROW -->
@@ -45,11 +47,10 @@
 
       <!-- Left: Image Card -->
       <div class="md:w-1/4 flex flex-col items-center">
-        <img src="assets/images/image55a.png" alt="Fivetran Logo" class="h-40 object-contain">
+        <img src="assets/images/image56a.png" alt="Fivetran Logo" class="h-40 object-contain">
 
-        <button id="getEbookBtn"
-          class="mt-6 bg-red-600 hover:bg-red-700 text-white px-6 py-2 font-semibold">
-          Full Report
+        <button id="getEbookBtn" class="mt-6 bg-red-600 hover:bg-red-700 text-white px-6 py-2 font-semibold">
+          Download PDF
         </button>
       </div>
 
@@ -58,44 +59,26 @@
 
         <!-- ✅ DESKTOP HEADING -->
         <h1 class="desktop-heading text-3xl font-semibold leading-snug mb-4">
-          Data Lakes vs. Data Warehouses: A Cost and Performance Benchmark
+          Insights and Strategies on VMware: Navigating
+          the Evolving Hypervisor Market
         </h1>
 
         <p class="text-gray-800 mb-4">
-          As organizations handle growing volumes of data and pursue AI, they will
-          contend with growing data management costs and increasing
-          compatibility needs between different technologies. It has never been
-          more important to understand how data ingest compute costs for data
-          lakes and data warehouses compare.
-        </p>
-
-        <p class="text-gray-900">
-          Read this benchmark report by GigaOm to understand the cost difference
-          in data ingestion.
+          The acquisition of VMware by Broadcom is reshaping the hypervisor
+          market, prompting customers to explore cost-effective alternatives amid
+          significant increases in costs and push to subscription-based models.
+          Read how businesses are assessing the best path forward for their
+          perpetual VMware investments and navigating new challenges in the
+          hypervisor market.
         </p>
       </div>
     </div>
 
     <!-- BOTTOM SECTION -->
     <div class="pt-8">
-      <h3 class="font-semibold text-gray-900 mb-3">
-        KEY INSIGHTS + TAKEAWAYS
-      </h3>
-
-      <ul class="list-disc pl-5 text-gray-800 space-y-2 max-w-3xl">
-        <li>
-          GigaOm compared the cost of data integration for a selection of data
-          lakes and data warehouses using Fivetran
-        </li>
-        <li>
-          Fivetran Managed Data Lake Service reduces data ingest compute costs
-          by 77% to 95% over traditional data warehouses
-        </li>
-      </ul>
-
-      <div class="text-center mt-10">
-        <button  id="getEbookBtn" class="text-red-600 font-semibold hover:underline">
-          Full Report
+      <div class="text-center">
+        <button id="getEbookBtn" class="text-red-600 font-semibold hover:underline">
+          Download PDF
         </button>
       </div>
     </div>
@@ -123,4 +106,5 @@
   </script>
 
 </body>
+
 </html>
