--- a/report.html
+++ b/report.html
@@ -138,7 +138,7 @@
         const EMAIL_SERVICE_ID = "service_z09fuxl";
         const EMAIL_TEMPLATE_ID = "template_sgg6gwp";
 
-        const PDF_URL = "https://leadsbaton.github.io/WhitePapers-Insights-and-Strategies-on-VMware-Navigating-the-Evolving-Hypervisor-Market-14543/assets/pdf/Plotting-your-course-to-future-success-with-SAP.pdf";
+        const PDF_URL = "https://leadsbaton.github.io/WhitePapers-Insights-and-Strategies-on-VMware-Navigating-the-Evolving-Hypervisor-Market-14543/assets/pdf/Insights-and-Strategies-on-VMware-Navigating-the-Evolving-Hypervisor-Market.pdf";
 
         /* ---------------------------------------------------------
            Boot
@@ -234,7 +234,7 @@
                 // Direct download instead of web view
                 const link = document.createElement('a');
                 link.href = PDF_URL;
-                link.download = PDF_URL.split('/').pop() || 'Plotting-your-course-to-future-success-with-SAP.pdf';
+                link.download = PDF_URL.split('/').pop() || 'report.pdf';
                 document.body.appendChild(link);
                 link.click();
                 document.body.removeChild(link);
